SRD can be edited
